# ztp

lab_01/: .gitignore  README.md  ZTP - Lab 01 API.postman_collection.json  pyproject.toml
lab_01/src/lab_01/: database.py  main.py  models.py  repositories.py  schemas.py  seeds.py  services.py
lab_01/src/lab_01/routers/: forbidden.py  products.py
lab_01/tests/: test_integration.py
